--- a/YNK_front/project/page/common/components/picker/picker.wxss
+++ b/YNK_front/project/page/common/components/picker/picker.wxss
@@ -10,7 +10,8 @@
 
   .menu {
       background-color: #fff;
-      border-bottom: 1rpx solid #e9e9e9;
+      margin-top: 30rpx;
+      /* border-top: 1rpx solid #e9e9e9; */
   }
 
   .menu-list {
