--- a/YNK_front/project/page/common/components/quickinput/quickinput.wxss
+++ b/YNK_front/project/page/common/components/quickinput/quickinput.wxss
@@ -6,7 +6,7 @@
     width: 100%;
     overflow: hidden;
     padding: 10rpx;
-    background: #f5f6f5;
+    /* background: #f5f6f5; */
     border-radius: 4rpx;
     white-space: nowrap;
 }
@@ -28,10 +28,7 @@
     margin-right: 10rpx;
     display: inline-block;
     color:rgb(143,143,143);
-}
-.option{
-    /* height: 100%; */
     font-size: inherit;
     line-height: inherit;
-    background-color: rgba(171,149,109,0.2)
+    background-color: rgba(240,240,240,0.8);
 }
