--- a/YNK_front/project/page/component/accredit/accredit.wxml
+++ b/YNK_front/project/page/component/accredit/accredit.wxml
@@ -1,16 +1,19 @@
 <view wx:if="{{canIUse}}">
-    <view class='header'>
-        <!-- <image src='/images/wx_login.png'></image> -->
+  <view class='header'>
+    <view class="userinfo-avatar">
+        <open-data  type="userAvatarUrl"></open-data>
     </view>
-
-    <view class='content'>
-        <view>申请获取以下权限</view>
-        <text>获得你的公开信息(昵称，头像等)</text>
+    <view class="userinfo-name">
+        <open-data  type="userNickName"></open-data>
     </view>
-
-    <button class='bottom' type='primary' open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">
-        授权登录
-    </button>
+      
+  </view>
+  <view class='content'>
+    <view>申请获取以下权限</view>
+    <text>获得您的公开信息(昵称，头像等)</text>
+  </view>
+  <button class='bottom'  open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">
+    授权登录
+  </button>
 </view>
-
 <view wx:else>请升级微信版本</view>
