--- a/YNK_front/project/page/component/accredit/accredit.wxss
+++ b/YNK_front/project/page/component/accredit/accredit.wxss
@@ -1,32 +1,40 @@
-/* page/component/accredit/accredit.wxss */
-
 .header {
+    position: relative;
     margin: 90rpx 0 90rpx 50rpx;
-    text-align: center;
     width: 650rpx;
-    height: 300rpx;
-    line-height: 450rpx;
-}
-
-.header image {
-    width: 200rpx;
-    height: 200rpx;
-}
-
-.content {
-    margin-left: 50rpx;
-    margin-bottom: 90rpx;
-}
-
-.content text {
+    height: 320rpx;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+  }
+  .userinfo-avatar {
+    overflow:hidden;
     display: block;
-    color: #9d9d9d;
-    margin-top: 40rpx;
-}
-
-.bottom {
-    background-color: #AB956D !important;
-    border-radius: 80rpx;
-    margin: 70rpx 50rpx;
-    font-size: 35rpx;
-}
+    width: 160rpx;
+    height: 160rpx;
+    margin: 20rpx;
+    margin-top: 50rpx;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  }
+  .userinfo-name{
+    color: black;
+  }
+  .content {
+      margin-left: 50rpx;
+      margin-bottom: 90rpx;
+  }
+  .content text {
+      display: block;
+      color: #9d9d9d;
+      margin-top: 40rpx;
+  }
+  .bottom {
+      border-radius: 80rpx;
+      margin: 70rpx 50rpx;
+      font-size: 35rpx;
+      background-color: transparent;
+  }
