--- a/YNK_front/project/page/component/chat-list/chat-list.wxml
+++ b/YNK_front/project/page/component/chat-list/chat-list.wxml
@@ -1,7 +1,7 @@
 <!--page/component/chat-list/chat-list.wxml-->
 <view class="box">
     <view class="chat-item" hover-class="none" hover-stop-propagation="false">
-        <navigator class="to" target="" url="" hover-class="navigator-hover" open-type="navigate">
+        <navigator class="to" target="" url="../chat/chat" hover-class="navigator-hover" open-type="navigate">
            <view class="gphoto">
                 <image class="gphoto-img" src="https://wx.qlogo.cn/mmopen/vi_32/njwaSUP5DiabKEr626aBGHEhibiaAEFLqungTIkqq4WibYRBXcWnCdwBDqbibsZBo67O3ic0O56ZLAUicyKg0RwJ08sSg/0" mode="aspectFit|aspectFill|widthFix" />
             </view>
@@ -33,7 +33,7 @@
           
        
     <view class="chat-item" hover-class="none" hover-stop-propagation="false">
-        <navigator class="to" target="" url="" hover-class="navigator-hover" open-type="navigate">
+        <navigator class="to" target="" url="../chat/chat" hover-class="navigator-hover" open-type="navigate">
            <view class="gphoto">
                 <image class="gphoto-img" src="https://wx.qlogo.cn/mmopen/vi_32/njwaSUP5DiabKEr626aBGHEhibiaAEFLqungTIkqq4WibYRBXcWnCdwBDqbibsZBo67O3ic0O56ZLAUicyKg0RwJ08sSg/0" mode="aspectFit|aspectFill|widthFix" />
             </view>
@@ -63,7 +63,7 @@
         </navigator>
     </view>  
     <view class="chat-item" hover-class="none" hover-stop-propagation="false">
-        <navigator class="to" target="" url="" hover-class="navigator-hover" open-type="navigate">
+        <navigator class="to" target="" url="../chat/chat" hover-class="navigator-hover" open-type="navigate">
            <view class="gphoto">
                 <image class="gphoto-img" src="https://wx.qlogo.cn/mmopen/vi_32/njwaSUP5DiabKEr626aBGHEhibiaAEFLqungTIkqq4WibYRBXcWnCdwBDqbibsZBo67O3ic0O56ZLAUicyKg0RwJ08sSg/0" mode="aspectFit|aspectFill|widthFix" />
             </view>
@@ -93,7 +93,7 @@
         </navigator>
     </view>  
     <view class="chat-item" hover-class="none" hover-stop-propagation="false">
-        <navigator class="to" target="" url="" hover-class="navigator-hover" open-type="navigate">
+        <navigator class="to" target="" url="../chat/chat" hover-class="navigator-hover" open-type="navigate">
            <view class="gphoto">
                 <image class="gphoto-img" src="https://wx.qlogo.cn/mmopen/vi_32/njwaSUP5DiabKEr626aBGHEhibiaAEFLqungTIkqq4WibYRBXcWnCdwBDqbibsZBo67O3ic0O56ZLAUicyKg0RwJ08sSg/0" mode="aspectFit|aspectFill|widthFix" />
             </view>
@@ -123,7 +123,7 @@
         </navigator>
     </view>  
     <view class="chat-item" hover-class="none" hover-stop-propagation="false">
-        <navigator class="to" target="" url="" hover-class="navigator-hover" open-type="navigate">
+        <navigator class="to" target="" url="../chat/chat" hover-class="navigator-hover" open-type="navigate">
            <view class="gphoto">
                 <image class="gphoto-img" src="https://wx.qlogo.cn/mmopen/vi_32/njwaSUP5DiabKEr626aBGHEhibiaAEFLqungTIkqq4WibYRBXcWnCdwBDqbibsZBo67O3ic0O56ZLAUicyKg0RwJ08sSg/0" mode="aspectFit|aspectFill|widthFix" />
             </view>
@@ -153,7 +153,7 @@
         </navigator>
     </view>  
     <view class="chat-item" hover-class="none" hover-stop-propagation="false">
-        <navigator class="to" target="" url="" hover-class="navigator-hover" open-type="navigate">
+        <navigator class="to" target="" url="../chat/chat" hover-class="navigator-hover" open-type="navigate">
            <view class="gphoto">
                 <image class="gphoto-img" src="https://wx.qlogo.cn/mmopen/vi_32/njwaSUP5DiabKEr626aBGHEhibiaAEFLqungTIkqq4WibYRBXcWnCdwBDqbibsZBo67O3ic0O56ZLAUicyKg0RwJ08sSg/0" mode="aspectFit|aspectFill|widthFix" />
             </view>
