--- a/YNK_front/project/page/component/details/details.wxml
+++ b/YNK_front/project/page/component/details/details.wxml
@@ -1,35 +1,76 @@
 <view class="main">
-    <navigator class="cart" open-type="switchTab" url="../cart/cart">
+    <!-- <navigator class="cart" open-type="switchTab" url="../cart/cart">
         <view class="carts-icon {{scaleCart?'on':''}}">
-            <!-- <image src="/image/cart2.png"></image> -->
+            <image src="/image/cart2.png"></image>
             <icon class="iconfont icon-qicheqianlian-1-copy"></icon>
             <text class="carts-icon-num" wx:if="{{hasCarts}}">{{hasCarts>0?1:0}}</text>
         </view>
-    </navigator>
+    </navigator> -->
     <view class="goods-box">
-        <image src="{{goods.image}}" class="goods-thumb"></image>
+        <image src="{{goods.gphoto}}" class="goods-thumb" mode="aspectFill"></image>
         <!-- <view class="goods-stock">{{goods.stock}}</view> -->
         <view class="goods-title">{{goods.title}}</view>
-        <view class="goods-price">￥ {{goods.price}}</view>
+        <view class="goods-price">￥{{goods.price}}</view>
         <image wx:if="{{show}}" src="/image/cart1.png" class="to-carts-icon"></image>
     </view>
+
+    <view class="goods-user" >
+        <navigator class="to" target="" url="" hover-class="navigator-hover" open-type="navigate">
+           <view class="gphoto">
+                <image class="gphoto-img" src="https://wx.qlogo.cn/mmopen/vi_32/njwaSUP5DiabKEr626aBGHEhibiaAEFLqungTIkqq4WibYRBXcWnCdwBDqbibsZBo67O3ic0O56ZLAUicyKg0RwJ08sSg/0" mode="aspectFit|aspectFill|widthFix" />
+            </view>
+            <view class="message">
+                <view class="msg-user" >
+                    <view class="user-school" > 
+                        <text class="" > </text>
+                    </view>
+                    <view class="user-name" > 
+                        <text class="" >{{user.user_name}}</text>
+                    </view>  
+                </view>
+                <view class="msg-detail" >
+                    <text class="">来自{{user.user_school}} 成功交易：{{user.sell_count}}件</text>
+                </view>
+                
+            </view>
+            <view class="operate" >
+                <button >
+                    私信TA
+                </button>
+            </view>
+        </navigator>
+    </view>
+      
+
+
+
     <view class="goods-tab-box">
-        <view class="goods-tab-nav" bindtap="bindTap" data-index="0">
-            商品详情
-        </view>
+        <!-- <view class="goods-tab-nav" bindtap="bindTap" data-index="0">
+            物品详情
+        </view> -->
         <view class="goods-content">
             <!-- <view wx:if="{{curIndex === 0}}">{{goods.detail}}</view> -->
             <view >
-                asdasdasdasdasd
-商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情商品详情
+                <text class="" selectable="false" space="false" decode="false">
+                    {{goods.detail}}
+                </text>
+                <view class="good-img-box" hover-class="none" hover-stop-propagation="false">
+                    <image class="good-img" mode="aspectFill" wx:for="{{goods.images}}" wx:key="{{key}}" src="{{goods.images[index]}}"     />
+                </view>
+                  
             </view>
         </view>
     </view>
     <view class="goods-operation">
        
         <view class="operation-to-cart opera-item" hover-class="none" hover-stop-propagation="false">
-            <text class="goods-to-cart" bindtap="addToCart">立即购买</text>
-            <icon class="iconfont icon-goumai1"></icon>
+            
+            <navigator class="to-pay" target="" url="../orders/orders" hover-class="navigator-hover" open-type="navigate">
+                <text class="goods-to-cart" bindtap="addToCart">立即购买</text>
+                <icon class="iconfont icon-goumai1"></icon>  
+            </navigator>
+              
+
         </view>
         <view class="operation-to-cart opera-item" bindtap="addToCart">
             <icon class="iconfont icon-qicheqianlian-1-copy"></icon>
