--- a/YNK_front/project/page/component/details/details.wxss
+++ b/YNK_front/project/page/component/details/details.wxss
@@ -17,12 +17,13 @@
     padding: 40rpx 45rpx;
     text-align: center;
     color: #454552;
-    border-bottom: 30rpx solid #ededed;
+    /* border-bottom: 10rpx solid #ededed; */
 }
 
 .goods-box .goods-thumb {
-    width: 300rpx;
-    height: 300rpx;
+    width: 100%;
+    height: 550rpx;
+    border-radius: 20rpx;
     margin: 35rpx 0 125rpx;
 }
 
@@ -166,9 +167,77 @@
     color:rosybrown
 }
 
+
+
+.goods-user{
+    border-bottom:10rpx solid #ededed;
+}
+.chat-item{
+    border-bottom: 10rpx solid #f5f6f5;
+    background-color: rgb(250,250,250);
+    /* width: 100%; */
+}
+.to{
+    height: 120rpx;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15rpx;
+}
+
+.gphoto{
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.gphoto-img{
+    width: 100rpx;
+    height: 100rpx;
+    border-radius: 50%;
+}
+.message{
+    /* margin-left: 30rpx; */
+    /* padding: 15rpx; */
+    width: 60%;
+    position: relative;
+    /* left: -100rpx; */
+}
+.msg-user{
+    display: flex;
+    /* width: 20%; */
+    font-size: 35rpx;
+    /* color: gray; */
+}
+
+.msg-detail{
+    font-size: 25rpx;
+    color: gray;
+}
+.operate{
+    width: 20%;
+    color: gray;
+    line-height: 100%;
+}
+.operate button{
+    font-size: 25rpx;
+}
+.good-img-box{
+    margin-top: 60rpx;
+}
+.good-img{
+    width: 100%;
+}
+
+
+
+
+
+
+
 .goods-tab-nav {
-    display: inline-block;
-    width: 33.33%;
+    /* display: inline-block; */
+    /* width: 33.33%; */
     height: 90rpx;
     line-height: 90rpx;
     border-bottom: 1rpx solid #ededed;
@@ -184,4 +253,9 @@
 
 .goods-content {
     padding: 40rpx;
+}
+
+.to-pay{
+    display: flex;
+    align-items: center;
 }
