--- a/YNK_front/project/page/component/publish/publish.wxss
+++ b/YNK_front/project/page/component/publish/publish.wxss
@@ -1,11 +1,20 @@
 /* page/component/publish/publish.wxss */
-@import "../../common/iconfont.wxss";
+/* @import "../../common/iconfont.wxss"; */
 
+page{
+  padding-bottom: 50rpx;
+  background-color: #f5f5f5;
+}
 ::-webkit-scrollbar{
   width:0;
   height: 0;
   color: transparent;
 }
+.iconfont{
+  color: gray;
+}
+
+
 .category-btn{
   display: flex;
   justify-content: space-between;
@@ -13,7 +22,6 @@
   text-align: left;
   overflow: hidden;
   background-color: transparent;
-  border: 0px solid snow;
 }
 textarea{
   width: 100%;
@@ -37,16 +45,18 @@ button::after {
 }
 
 .panel{
-  background-color: rgb(245, 245, 245);
-  border-radius: 2px;
-  margin: 30rpx 5rpx ;
+  background-color: white;
+  /* width: 95%; */
+  /* border-radius: 2px; */
+  /* margin: 30rpx auto ; */
   padding: 20rpx 5px;
-  box-shadow: 0 4rpx 8rpx 0 rgba(0,0,0,0.20);
+  /* box-shadow: 0 4rpx 8rpx 0 rgba(0,0,0,0.20); */
   overflow: hidden;
 }
 .div-line{
   background: #E0E3DA;
-  width: 100%;
+  width: 91%;
+  margin: 0 auto;
   height: 3rpx;
 }
 
@@ -55,6 +65,8 @@ button::after {
 /* 文字描述部分 */
 .message{
   position: relative;
+  border-bottom: 10rpx solid #ededed;
+
 }
 .title{
   height: 70rpx;
@@ -121,12 +133,23 @@ button::after {
 }
 
 .submit{
-  /* display: block; */
-  /* position: absolute; */
-  /* bottom:10rpx; */
-  /* width: 100%; */
+  display: block;
+  position: fixed;
+  bottom:10rpx;
+  width: 100%;
+  background-color: white;
+  border-radius: 10rpx;
+
 }
 .submit-btn{
-  background-color: #AB956D ;
-  color:white;
+  background-color: rgba(255,255,255,1) ;
+  color:rosybrown;
+  background-color: white;
+}
+.icon-fabu{
+  color:rosybrown;
+  /* font-size: 55rpx; */
+}
+.price-btn-left{
+  width: 80%;
 }
